...
        tabBarInactiveTintColor: "#a08585",
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: "Adopter",
          tabBarLabel: "Adopter",
          tabBarIcon: tabIcon("paw"),
        }}
      />
      <Tabs.Screen
        name="signalements"
...
        }}
      />
      <Tabs.Screen
        name="compte"
        options={{
          title: "Mon compte",
          tabBarLabel: "Compte",
          tabBarIcon: tabIcon("account"),
        }}
        listeners={{
          tabPress: (e) => {
            if (!isAuthed) {
              e.preventDefault();
...
