...
                transition={250}
                style={styles.petPhoto}
              />
              <Pressable
                testID={
                  favoriteSet.has(item.id)
                    ? "pet-card-heart-active"
                    : "pet-card-heart"
                }
                style={styles.heart}
                onPress={() => handleToggleFavorite(item.id)}
                hitSlop={10}
              >
                <MaterialCommunityIcons
...
